# Morph

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  install.sh  morph.example.toml
.github/workflows/: ci.yml  release.yml
assets/fonts/: README.md
crates/morph-cli/: Cargo.toml
crates/morph-cli/src/: main.rs
crates/morph-cli/src/commands/: benchmark.rs  config.rs  doctor.rs  exec.rs  init.rs  inspect.rs  mod.rs  plugins.rs  providers.rs  render.rs  run.rs  test.rs
crates/morph-config/: Cargo.toml
crates/morph-config/src/: error.rs  lib.rs  load.rs  schema.rs  watch.rs
crates/morph-core/: Cargo.toml
crates/morph-core/src/: capabilities.rs  content.rs  error.rs  lib.rs  message.rs  registry.rs  representation.rs  request.rs  stats.rs  stream.rs  traits.rs
crates/morph-detect/: Cargo.toml
crates/morph-detect/src/: code.rs  lib.rs  logs.rs  markdown.rs  structured.rs  table.rs
crates/morph-gateway/: Cargo.toml
crates/morph-gateway/src/: auth.rs  build.rs  classifier.rs  inspector.html  inspector.rs  lib.rs  pipeline.rs  representation.rs  routes.rs  state.rs
crates/morph-gateway/tests/: integration.rs
crates/morph-middleware/: Cargo.toml
crates/morph-middleware/src/: cache.rs  lib.rs  logging.rs  metrics_mw.rs  recording.rs  redaction.rs  stats.rs
crates/morph-plugin-abi/: Cargo.toml
crates/morph-plugin-abi/src/: lib.rs
crates/morph-plugin-abi/wit/: plugin.wit
crates/morph-plugin-host/: Cargo.toml
crates/morph-plugin-host/src/: adapters.rs  discover.rs  lib.rs  runtime.rs  state.rs
crates/morph-plugin-host/tests/: example_plugin.rs
crates/morph-protocols/: Cargo.toml
crates/morph-protocols/src/: anthropic_messages.rs  lib.rs  ollama.rs  openai_chat.rs  util.rs
crates/morph-providers/: Cargo.toml
crates/morph-providers/src/: anthropic.rs  lib.rs  openai.rs  util.rs
crates/morph-render/: Cargo.toml
crates/morph-render/src/: canvas.rs  code.rs  json.rs  lib.rs  log.rs  markdown.rs  table.rs
crates/morph-render/src/snapshots/: morph_render__code__tests__snapshot_rust_code_svg.snap  morph_render__json__tests__snapshot_json_tree_svg.snap  morph_render__log__tests__snapshot_ansi_log_svg.snap  morph_render__log__tests__snapshot_plain_stacktrace_svg.snap  morph_render__markdown__tests__snapshot_markdown_document_svg.snap  morph_render__table__tests__snapshot_table_svg.snap
docs/: ARCHITECTURE.md  PLUGINS.md  PROVIDERS.md  RENDERING.md  ROADMAP.md
plugins/example-renderer/: Cargo.toml
plugins/example-renderer/src/: lib.rs
