[workspace]
resolver = "2"
members = [
    "crates/morph-core",
    "crates/morph-config",
    "crates/morph-detect",
    "crates/morph-render",
    "crates/morph-providers",
    "crates/morph-protocols",
    "crates/morph-plugin-abi",
    "crates/morph-plugin-host",
    "crates/morph-middleware",
    "crates/morph-gateway",
    "crates/morph-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.94"
license = "Apache-2.0"
authors = ["Morph Contributors"]
repository = "https://github.com/JGalego/Morph"

[workspace.dependencies]
morph-core = { path = "crates/morph-core" }
morph-config = { path = "crates/morph-config" }
morph-detect = { path = "crates/morph-detect" }
morph-render = { path = "crates/morph-render" }
morph-providers = { path = "crates/morph-providers" }
morph-protocols = { path = "crates/morph-protocols" }
morph-plugin-abi = { path = "crates/morph-plugin-abi" }
morph-plugin-host = { path = "crates/morph-plugin-host" }
morph-middleware = { path = "crates/morph-middleware" }
morph-gateway = { path = "crates/morph-gateway" }

tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "2"
async-trait = "0.1"
tracing = "0.1"
futures = "0.3"
bytes = "1"
regex = "1"

# HTTP client for provider adapters — rustls (not OpenSSL) so static/musl
# builds don't need a system TLS library.
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
eventsource-stream = "0.2"

# Rendering: pure-Rust SVG authoring/rasterization, no system font/cairo deps.
usvg = "0.44"
resvg = "0.44"
tiny-skia = "0.11"
syntect = { version = "5", default-features = false, features = ["parsing", "html", "regex-fancy", "default-fancy", "default-syntaxes", "default-themes"] }

insta = "1"
wiremock = "0.6"
tempfile = "3"
uuid = { version = "1", features = ["v4"] }
clap = { version = "4", features = ["derive"] }
axum = { version = "0.7", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors", "compression-gzip", "compression-br"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
metrics = "0.24"
metrics-exporter-prometheus = "0.16"
moka = { version = "0.12", features = ["sync"] }
governor = "0.7"
tower_governor = "0.4"

# WASM plugin sandboxing (Component Model). Pinned to the versions verified
# to interoperate during prototyping: wit-bindgen 0.58 guest codegen against
# wasmtime/wasmtime-wasi 46's `p2` WASI Preview 2 module layout.
wasmtime = { version = "46", features = ["component-model"] }
wasmtime-wasi = "46"
wit-bindgen = "0.58"
base64 = "0.22"
async-stream = "0.3"
anyhow = "1"
