[package]
name = "morph-config"
description = "TOML configuration schema and hot-reload for Morph"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
toml.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
notify = "6"

[dev-dependencies]
tempfile = "3"
