[package]
name = "morph-detect"
description = "Content classification and the default representation planner for Morph"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
morph-core.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
