[package]
name = "morph-gateway"
description = "Morph's HTTP server: wires protocol adapters, the detect/plan/render pipeline, provider adapters, and middleware into a running gateway"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
morph-core.workspace = true
morph-config.workspace = true
morph-detect.workspace = true
morph-render.workspace = true
morph-providers.workspace = true
morph-protocols.workspace = true
morph-middleware.workspace = true
morph-plugin-host.workspace = true

tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
governor.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
futures.workspace = true
bytes.workspace = true
async-stream.workspace = true
anyhow.workspace = true
base64.workspace = true
morph-plugin-abi.workspace = true

[dev-dependencies]
wiremock.workspace = true
reqwest.workspace = true
tempfile.workspace = true
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
