[package]
name = "morph-plugin-abi"
description = "Shared WASM component-model interface (WIT) and host-side bindings for Morph plugins"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
wasmtime.workspace = true
