[package]
name = "morph-plugin-host"
description = "Sandboxed WASM plugin host (wasmtime component model) for Morph renderers/classifiers/transformers"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
morph-core.workspace = true
morph-plugin-abi.workspace = true
wasmtime.workspace = true
wasmtime-wasi.workspace = true
serde.workspace = true
serde_json.workspace = true
base64.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
