[package]
name = "morph-protocols"
description = "Ingress protocol adapters: OpenAI Chat Completions, Anthropic Messages, Ollama"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
morph-core.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
