[package]
name = "morph-providers"
description = "Provider adapters: generic OpenAI-wire (covers OpenAI, Azure OpenAI, Ollama, vLLM, LM Studio, OpenRouter, Together, Groq, Cerebras, Mistral, DeepSeek, xAI) and Anthropic"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
morph-core.workspace = true
tokio.workspace = true
async-trait.workspace = true
futures.workspace = true
bytes.workspace = true
reqwest.workspace = true
eventsource-stream.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true

[dev-dependencies]
wiremock.workspace = true
